--- a/web_pjt/web_pjt/main/templates/main/main.html
+++ b/web_pjt/web_pjt/main/templates/main/main.html
@@ -23,7 +23,8 @@
   <div class="col-3 mb-4">
     <div class="card">
       <img src="https://image.tmdb.org/t/p/w342/{{movie.poster_path}}" class="card-img-top" alt="" data-toggle="modal"
-        data-target="#Modal-{{ movie.pk }}" style="object-fit: cover; width: 253px; height: 377.28px; border-radius: 10px;">
+        data-target="#Modal-{{ movie.pk }}"
+        style="object-fit: cover; width: 253px; height: 377.28px; border-radius: 10px;">
     </div>
   </div>
   <!-- Modal -->
@@ -44,7 +45,7 @@
         <div class="modal-body row">
           <div class="col-md-6">
             <img src="https://image.tmdb.org/t/p/original/{{ movie.backdrop_path }}" class="card-img-top"
-              alt="{{ movie.title }}"/>
+              alt="{{ movie.title }}" />
             <hr>
             {% if movie.title|length > 10 %}
             <h4 class="text-center">{{ movie.title }}</h4>
@@ -101,13 +102,16 @@
           <th scope="row">{{ article.pk }}</th>
           <td>
             {% if check_delta < article.created_at and article.comment_set.exists %}
-            <a href="{% url 'movies:movie_articles_detail' article.movie_title.pk article.pk %}">{{ article.title }} <small>[{{ article.comment_set.count }}]</a> <span class="badge badge-secondary">New</span></small>
+            <a href="{% url 'articles:detail' article.pk %}">{{ article.title }}
+              <small>[{{ article.comment_set.count }}]</a> <span class="badge badge-secondary">New</span></small>
             {% elif check_delta < article.created_at %}
-            <a href="{% url 'movies:movie_articles_detail' article.movie_title.pk article.pk %}">{{ article.title }}</a> <small><span class="badge badge-secondary">New</span></small>
+            <a href="{% url 'articles:detail' article.pk %}">{{ article.title }}</a> <small><span
+                class="badge badge-secondary">New</span></small>
             {% elif article.comment_set.exists %}
-            <a href="{% url 'movies:movie_articles_detail' article.movie_title.pk article.pk %}">{{ article.title }} <small>[{{ article.comment_set.count }}] </a>
+            <a href="{% url 'articles:detail' article.pk %}">{{ article.title }}
+              <small>[{{ article.comment_set.count }}] </a>
             {% else %}
-            <a href="{% url 'movies:movie_articles_detail' article.movie_title.pk article.pk %}">{{ article.title }}</a>
+            <a href="{% url 'articles:detail' article.pk %}">{{ article.title }}</a>
             {% endif %}
           </td>
           <td>{{ article.movie_title }}</td>
